# hedgehog-classes-old

./: LICENSE  README.md  default.nix  hedgehog-classes.cabal  shell.nix
src/Test/Hedgehog/: Classes.hs  Properties.hs
src/Test/Hedgehog/Classes/: Bits.hs  Eq.hs  Integral.hs  IsList.hs  Json.hs  Monoid.hs  Ord.hs  Semigroup.hs  ShowRead.hs
